Replace deprecated Jsr310TimestampBasedConverters to package-private